--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Assaignment b10</title>
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/blog.css">
+</header>
 <body>
-    
+    <header class="header">
+          <section class="section-container">
+            <img class="section-picture" src="assets/Group.png" alt="">
+            <h2 class="section-title">"In the near future, I hope to <br>  become a Developer."</h2>
+            <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            <button class="btn-primary">Contact with me</button>
+          </section>            
+    </header>
+    <main>
+        <section>
+            
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
