Applying display flex and gap on language container

--- a/index.html
+++ b/index.html
@@ -61,7 +61,31 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Sbn18WSKRtE?si=jQ1RzmIbOON8RiET" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
-        se
+        <section>
+            <h3 class="secondary-title text-position">My Current Target</h3>
+           
+     <p class="secondary-description text-position">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+    <div class="lang-container">
+        <div class="langs langs-html">
+            <img src="assets/html.png" alt="">
+            <h4>HTML</h4>
+            <p class="secondary-description">Lorem Ipsum is simply dummy text of the printing.</p>
+        <button>Learn More</button>
+        </div>
+        <div class="langs langs-css">
+            <img src="assets/css.png" alt="">
+            <h4>CSS</h4>
+            <p class="secondary-description">Lorem Ipsum is simply dummy text of the printing.</p>
+        <button>Learn More</button>
+        </div>
+        <div class="langs langs-js">
+            <img src="assets/js.png" alt="">
+            <h4 >JavaScript</h4>
+            <p class="secondary-description">Lorem Ipsum is simply dummy text of the printing.</p>
+        <button>Learn More</button>
+        </div>
+    </div>  
+    </section>
     </main>
     <footer>
 
