footer setup using flex & justify content-center

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </header>
     <main class="main">
         <section class="secondary-bg">
-            <h3 class="secondary-title">Why Web Development??</h3>
-            <p class="secondary-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            <h3 class="secondary-title text-position">Why Web Development??</h3>
+            <p class="secondary-description text-position">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
         <div class="banner" >
             <div>
                 
@@ -70,25 +70,73 @@
             <img src="assets/html.png" alt="">
             <h4>HTML</h4>
             <p class="secondary-description">Lorem Ipsum is simply dummy text of the printing.</p>
-        <button>Learn More</button>
+        <button class="lang-btn">Learn More</button>
         </div>
         <div class="langs langs-css">
             <img src="assets/css.png" alt="">
             <h4>CSS</h4>
             <p class="secondary-description">Lorem Ipsum is simply dummy text of the printing.</p>
-        <button>Learn More</button>
+        <button class="lang-btn">Learn More</button>
         </div>
         <div class="langs langs-js">
             <img src="assets/js.png" alt="">
             <h4 >JavaScript</h4>
             <p class="secondary-description">Lorem Ipsum is simply dummy text of the printing.</p>
-        <button>Learn More</button>
+        <button class="lang-btn">Learn More</button>
         </div>
     </div>  
     </section>
+    <section>
+       <h3 class="secondary-title text-position">My Next Target</h3>
+       <p class="secondary-description text-position">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+    <div class="main-lang-explain">
+        <div class="lang-img target-container">
+            <img class="terget-img-quantity" src="assets/react.png" alt="">
+            <div class="lang-description">
+                   <h4 >ReactJS</h4>
+                    <p class="secondary-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    <button class="lang-btn">Learn More</button>
+            </div>
+        </div>
+        <div class="lang-img target-container">
+            <img class="terget-img-quantity" src="assets/react.png" alt="">
+            <div class="lang-description">
+                   <h4 >ReactJS</h4>
+                    <p class="secondary-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    <button class="lang-btn">Learn More</button>
+            </div>
+        </div>
+        <div class="lang-img target-container ">
+            <img class="terget-img-quantity" src="assets/react.png" alt="">
+            <div class="lang-description">
+                   <h4 >ReactJS</h4>
+                    <p class="secondary-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    <button class="lang-btn">Learn More</button>
+            </div>
+        </div>
+    </div>
+    
+    </section>
+        <div class="super-container ">
+            <div class="super-content ">
+                <h1>I need Support</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div>
+                        <input type="text" name="" id="" placeholder="Suggest me any feedback for me">
+                        <button id="super-btn">Submit</button>
+                    </div>
+            </div>
+        </div>
     </main>
-    <footer>
-
+    <footer class="main">
+<div class="footer-container">
+    <h4>An Open Commitment by Awlad Hossain</h4>
+    <div>
+<a href="https://www.facebook.com/"><img src="assets/facebook.png" alt=""></a>
+<a href="https://www.facebook.com/"><img src="assets/github.png" alt=""></a>
+<a href="https://www.facebook.com/"><img src="assets/linkedin-icon 1.png" alt=""></a>
+    </div>
+</div>
     </footer>
 </body>
 </html>
